mangle-lsp/src/parser/gen/MangleParser.ts
// Generated from Mangle.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { MangleListener } from "./MangleListener.js";
import { MangleVisitor } from "./MangleVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class MangleParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly WHITESPACE = 8;
    public static readonly COMMENT = 9;
    public static readonly LONGLEFTDOUBLEARROW = 10;
    public static readonly PACKAGE = 11;
    public static readonly USE = 12;
    public static readonly DECL = 13;
    public static readonly BOUND = 14;
    public static readonly LET = 15;
    public static readonly DO = 16;
    public static readonly LPAREN = 17;
    public static readonly RPAREN = 18;
    public static readonly LBRACKET = 19;
    public static readonly RBRACKET = 20;
    public static readonly LBRACE = 21;
    public static readonly RBRACE = 22;
    public static readonly EQ = 23;
    public static readonly BANGEQ = 24;
    public static readonly COMMA = 25;
    public static readonly BANG = 26;
    public static readonly LESSEQ = 27;
    public static readonly LESS = 28;
    public static readonly GREATEREQ = 29;
    public static readonly GREATER = 30;
    public static readonly COLONDASH = 31;
    public static readonly NEWLINE = 32;
    public static readonly PIPEGREATER = 33;
    public static readonly AT = 34;
    public static readonly DIAMONDMINUS = 35;
    public static readonly DIAMONDPLUS = 36;
    public static readonly BOXMINUS = 37;
    public static readonly BOXPLUS = 38;
    public static readonly TIMESTAMP = 39;
    public static readonly DURATION = 40;
    public static readonly NUMBER = 41;
    public static readonly FLOAT = 42;
    public static readonly VARIABLE = 43;
    public static readonly NAME = 44;
    public static readonly TYPENAME = 45;
    public static readonly DOT_TYPE = 46;
    public static readonly CONSTANT = 47;
    public static readonly STRING = 48;
    public static readonly BYTESTRING = 49;
    public static readonly RULE_start = 0;
    public static readonly RULE_program = 1;
    public static readonly RULE_packageDecl = 2;
    public static readonly RULE_useDecl = 3;
    public static readonly RULE_decl = 4;
    public static readonly RULE_descrBlock = 5;
    public static readonly RULE_boundsBlock = 6;
    public static readonly RULE_constraintsBlock = 7;
    public static readonly RULE_clause = 8;
    public static readonly RULE_temporalAnnotation = 9;
    public static readonly RULE_temporalBound = 10;
    public static readonly RULE_clauseBody = 11;
    public static readonly RULE_transform = 12;
    public static readonly RULE_letStmt = 13;
    public static readonly RULE_literalOrFml = 14;
    public static readonly RULE_temporalOperator = 15;
    public static readonly RULE_term = 16;
    public static readonly RULE_member = 17;
    public static readonly RULE_atom = 18;
    public static readonly RULE_atoms = 19;

    public static readonly literalNames = [
        null, "'temporal'", "'.'", "'descr'", "'inclusion'", "'now'", "':'", 
        "'opt'", null, null, "'\\u27F8'", "'Package'", "'Use'", "'Decl'", 
        "'bound'", "'let'", "'do'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
        "'='", "'!='", "','", "'!'", "'<='", "'<'", "'>='", "'>'", "':-'", 
        "'\\n'", "'|>'", "'@'", "'<-'", "'<+'", "'[-'", "'[+'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, "WHITESPACE", "COMMENT", 
        "LONGLEFTDOUBLEARROW", "PACKAGE", "USE", "DECL", "BOUND", "LET", 
        "DO", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", 
        "EQ", "BANGEQ", "COMMA", "BANG", "LESSEQ", "LESS", "GREATEREQ", 
        "GREATER", "COLONDASH", "NEWLINE", "PIPEGREATER", "AT", "DIAMONDMINUS", 
        "DIAMONDPLUS", "BOXMINUS", "BOXPLUS", "TIMESTAMP", "DURATION", "NUMBER", 
        "FLOAT", "VARIABLE", "NAME", "TYPENAME", "DOT_TYPE", "CONSTANT", 
        "STRING", "BYTESTRING"
    ];
    public static readonly ruleNames = [
        "start", "program", "packageDecl", "useDecl", "decl", "descrBlock", 
        "boundsBlock", "constraintsBlock", "clause", "temporalAnnotation", 
        "temporalBound", "clauseBody", "transform", "letStmt", "literalOrFml", 
        "temporalOperator", "term", "member", "atom", "atoms",
    ];

    public get grammarFileName(): string { return "Mangle.g4"; }
    public get literalNames(): (string | null)[] { return MangleParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return MangleParser.symbolicNames; }
    public get ruleNames(): string[] { return MangleParser.ruleNames; }
    public get serializedATN(): number[] { return MangleParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, MangleParser._ATN, MangleParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public start(): StartContext {
        let localContext = new StartContext(this.context, this.state);
        this.enterRule(localContext, 0, MangleParser.RULE_start);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 40;
            this.program();
            this.state = 41;
            this.match(MangleParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 2, MangleParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 44;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 11) {
                {
                this.state = 43;
                this.packageDecl();
                }
            }

            this.state = 49;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 12) {
                {
                {
                this.state = 46;
                this.useDecl();
                }
                }
                this.state = 51;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 56;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2629632) !== 0) || ((((_la - 41)) & ~0x1F) === 0 && ((1 << (_la - 41)) & 495) !== 0)) {
                {
                this.state = 54;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case MangleParser.DECL:
                    {
                    this.state = 52;
                    this.decl();
                    }
                    break;
                case MangleParser.LBRACKET:
                case MangleParser.LBRACE:
                case MangleParser.NUMBER:
                case MangleParser.FLOAT:
                case MangleParser.VARIABLE:
                case MangleParser.NAME:
                case MangleParser.DOT_TYPE:
                case MangleParser.CONSTANT:
                case MangleParser.STRING:
                case MangleParser.BYTESTRING:
                    {
                    this.state = 53;
                    this.clause();
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                this.state = 58;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public packageDecl(): PackageDeclContext {
        let localContext = new PackageDeclContext(this.context, this.state);
        this.enterRule(localContext, 4, MangleParser.RULE_packageDecl);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 59;
            this.match(MangleParser.PACKAGE);
            this.state = 60;
            this.match(MangleParser.NAME);
            this.state = 62;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 19) {
                {
                this.state = 61;
                this.atoms();
                }
            }

            this.state = 64;
            this.match(MangleParser.BANG);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public useDecl(): UseDeclContext {
        let localContext = new UseDeclContext(this.context, this.state);
        this.enterRule(localContext, 6, MangleParser.RULE_useDecl);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 66;
            this.match(MangleParser.USE);
            this.state = 67;
            this.match(MangleParser.NAME);
            this.state = 69;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 19) {
                {
                this.state = 68;
                this.atoms();
                }
            }

            this.state = 71;
            this.match(MangleParser.BANG);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public decl(): DeclContext {
        let localContext = new DeclContext(this.context, this.state);
        this.enterRule(localContext, 8, MangleParser.RULE_decl);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 73;
            this.match(MangleParser.DECL);
            this.state = 74;
            this.atom();
            this.state = 76;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 1) {
                {
                this.state = 75;
                this.match(MangleParser.T__0);
                }
            }

            this.state = 79;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 3) {
                {
                this.state = 78;
                this.descrBlock();
                }
            }

            this.state = 84;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 14) {
                {
                {
                this.state = 81;
                this.boundsBlock();
                }
                }
                this.state = 86;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 88;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 4) {
                {
                this.state = 87;
                this.constraintsBlock();
                }
            }

            this.state = 90;
            this.match(MangleParser.T__1);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public descrBlock(): DescrBlockContext {
        let localContext = new DescrBlockContext(this.context, this.state);
        this.enterRule(localContext, 10, MangleParser.RULE_descrBlock);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 92;
            this.match(MangleParser.T__2);
            this.state = 93;
            this.atoms();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public boundsBlock(): BoundsBlockContext {
        let localContext = new BoundsBlockContext(this.context, this.state);
        this.enterRule(localContext, 12, MangleParser.RULE_boundsBlock);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 95;
            this.match(MangleParser.BOUND);
            this.state = 96;
            this.match(MangleParser.LBRACKET);
            this.state = 102;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 10, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 97;
                    this.term();
                    this.state = 98;
                    this.match(MangleParser.COMMA);
                    }
                    }
                }
                this.state = 104;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 10, this.context);
            }
            this.state = 106;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (((((_la - 19)) & ~0x1F) === 0 && ((1 << (_la - 19)) & 2076180485) !== 0)) {
                {
                this.state = 105;
                this.term();
                }
            }

            this.state = 108;
            this.match(MangleParser.RBRACKET);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public constraintsBlock(): ConstraintsBlockContext {
        let localContext = new ConstraintsBlockContext(this.context, this.state);
        this.enterRule(localContext, 14, MangleParser.RULE_constraintsBlock);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 110;
            this.match(MangleParser.T__3);
            this.state = 111;
            this.atoms();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public clause(): ClauseContext {
        let localContext = new ClauseContext(this.context, this.state);
        this.enterRule(localContext, 16, MangleParser.RULE_clause);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 113;
            this.atom();
            this.state = 115;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 34) {
                {
                this.state = 114;
                this.temporalAnnotation();
                }
            }

            this.state = 119;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 10 || _la === 31) {
                {
                this.state = 117;
                _la = this.tokenStream.LA(1);
                if(!(_la === 10 || _la === 31)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 118;
                this.clauseBody();
                }
            }

            this.state = 121;
            this.match(MangleParser.T__1);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public temporalAnnotation(): TemporalAnnotationContext {
        let localContext = new TemporalAnnotationContext(this.context, this.state);
        this.enterRule(localContext, 18, MangleParser.RULE_temporalAnnotation);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 123;
            this.match(MangleParser.AT);
            this.state = 124;
            this.match(MangleParser.LBRACKET);
            this.state = 125;
            this.temporalBound();
            this.state = 128;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 25) {
                {
                this.state = 126;
                this.match(MangleParser.COMMA);
                this.state = 127;
                this.temporalBound();
                }
            }

            this.state = 130;
            this.match(MangleParser.RBRACKET);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public temporalBound(): TemporalBoundContext {
        let localContext = new TemporalBoundContext(this.context, this.state);
        this.enterRule(localContext, 20, MangleParser.RULE_temporalBound);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 132;
            _la = this.tokenStream.LA(1);
            if(!(_la === 5 || ((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & 19) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public clauseBody(): ClauseBodyContext {
        let localContext = new ClauseBodyContext(this.context, this.state);
        this.enterRule(localContext, 22, MangleParser.RULE_clauseBody);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 134;
            this.literalOrFml();
            this.state = 139;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 15, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 135;
                    this.match(MangleParser.COMMA);
                    this.state = 136;
                    this.literalOrFml();
                    }
                    }
                }
                this.state = 141;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 15, this.context);
            }
            this.state = 143;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 25) {
                {
                this.state = 142;
                this.match(MangleParser.COMMA);
                }
            }

            this.state = 149;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 33) {
                {
                {
                this.state = 145;
                this.match(MangleParser.PIPEGREATER);
                this.state = 146;
                this.transform();
                }
                }
                this.state = 151;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public transform(): TransformContext {
        let localContext = new TransformContext(this.context, this.state);
        this.enterRule(localContext, 24, MangleParser.RULE_transform);
        let _la: number;
        try {
            this.state = 173;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case MangleParser.DO:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 152;
                this.match(MangleParser.DO);
                this.state = 153;
                this.term();
                this.state = 163;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 25) {
                    {
                    this.state = 154;
                    this.match(MangleParser.COMMA);
                    this.state = 155;
                    this.letStmt();
                    this.state = 160;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                    while (_la === 25) {
                        {
                        {
                        this.state = 156;
                        this.match(MangleParser.COMMA);
                        this.state = 157;
                        this.letStmt();
                        }
                        }
                        this.state = 162;
                        this.errorHandler.sync(this);
                        _la = this.tokenStream.LA(1);
                    }
                    }
                }

                }
                break;
            case MangleParser.LET:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 165;
                this.letStmt();
                this.state = 170;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 25) {
                    {
                    {
                    this.state = 166;
                    this.match(MangleParser.COMMA);
                    this.state = 167;
                    this.letStmt();
                    }
                    }
                    this.state = 172;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public letStmt(): LetStmtContext {
        let localContext = new LetStmtContext(this.context, this.state);
        this.enterRule(localContext, 26, MangleParser.RULE_letStmt);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 175;
            this.match(MangleParser.LET);
            this.state = 176;
            this.match(MangleParser.VARIABLE);
            this.state = 177;
            this.match(MangleParser.EQ);
            this.state = 178;
            this.term();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public literalOrFml(): LiteralOrFmlContext {
        let localContext = new LiteralOrFmlContext(this.context, this.state);
        this.enterRule(localContext, 28, MangleParser.RULE_literalOrFml);
        let _la: number;
        try {
            this.state = 193;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case MangleParser.LBRACKET:
            case MangleParser.LBRACE:
            case MangleParser.DIAMONDMINUS:
            case MangleParser.DIAMONDPLUS:
            case MangleParser.BOXMINUS:
            case MangleParser.BOXPLUS:
            case MangleParser.NUMBER:
            case MangleParser.FLOAT:
            case MangleParser.VARIABLE:
            case MangleParser.NAME:
            case MangleParser.DOT_TYPE:
            case MangleParser.CONSTANT:
            case MangleParser.STRING:
            case MangleParser.BYTESTRING:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 181;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (((((_la - 35)) & ~0x1F) === 0 && ((1 << (_la - 35)) & 15) !== 0)) {
                    {
                    this.state = 180;
                    this.temporalOperator();
                    }
                }

                this.state = 183;
                this.term();
                this.state = 185;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 34) {
                    {
                    this.state = 184;
                    this.temporalAnnotation();
                    }
                }

                this.state = 189;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2038431744) !== 0)) {
                    {
                    this.state = 187;
                    _la = this.tokenStream.LA(1);
                    if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 2038431744) !== 0))) {
                    this.errorHandler.recoverInline(this);
                    }
                    else {
                        this.errorHandler.reportMatch(this);
                        this.consume();
                    }
                    this.state = 188;
                    this.term();
                    }
                }
